// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`'/basic': Package.build > default > main 1`] = `
"export function foo(options = {}) {
    console.log('Hello, foo!', options.value);
}
export function bar(options = {}) {
    console.log('Hello, bar!', options.value);
}
(function (bar) {
    function baz(options = {}) {
        console.log('Hello, baz!', options.value);
    }
    bar.baz = baz;
})(bar || (bar = {}));
//# sourceMappingURL=index.js.map"
`;

exports[`'/basic': Package.build > default > output 1`] = `
"{
  "name": "basic",
  "version": "0.0.0",
  "type": "module",
  "exports": {
    ".": {
      "src": "./index.ts",
      "types": "./dist/index.d.ts",
      "default": "./dist/index.js"
    }
  },
  "sideEffects": false,
  "main": "./dist/index.js",
  "module": "./dist/index.js",
  "types": "./dist/index.d.ts"
}


├── dist
│   ├── index.d.ts
│   ├── index.d.ts.map
│   ├── index.js
│   └── index.js.map
├── index.ts
├── package.json
└── tsconfig.json
"
`;

exports[`'/basic': Package.build > default > result 1`] = `
{
  "packageJson": {
    "exports": {
      ".": {
        "default": "./dist/index.js",
        "src": "./index.ts",
        "types": "./dist/index.d.ts",
      },
    },
    "main": "./dist/index.js",
    "module": "./dist/index.js",
    "name": "basic",
    "sideEffects": false,
    "type": "module",
    "types": "./dist/index.d.ts",
    "version": "0.0.0",
  },
  "tsConfig": {
    "compilerOptions": {
      "composite": false,
      "declaration": true,
      "declarationDir": undefined,
      "declarationMap": true,
      "emitDeclarationOnly": false,
      "esModuleInterop": true,
      "isolatedModules": true,
      "module": "esnext",
      "moduleDetection": "force",
      "moduleResolution": "bundler",
      "noEmit": false,
      "outDir": "/repos/basic/dist",
      "skipLibCheck": true,
      "sourceMap": true,
      "strict": true,
      "target": "es2021",
      "verbatimModuleSyntax": true,
    },
    "include": [
      "/repos/basic/index.ts",
    ],
  },
}
`;

exports[`'/basic': Package.build > default > types 1`] = `
"export declare function foo(options?: foo.Options): void;
export declare namespace foo {
    type Options = {
        value?: string | undefined;
    };
}
export declare function bar(options?: bar.Options): void;
export declare namespace bar {
    type Options = {
        value?: string | undefined;
    };
    function baz(options?: Options): void;
}
//# sourceMappingURL=index.d.ts.map"
`;

exports[`'/basic': Package.transpile > default > result 1`] = `
{
  "tsConfig": {
    "compilerOptions": {
      "composite": false,
      "declaration": true,
      "declarationDir": undefined,
      "declarationMap": true,
      "emitDeclarationOnly": false,
      "esModuleInterop": true,
      "isolatedModules": true,
      "module": "esnext",
      "moduleDetection": "force",
      "moduleResolution": "bundler",
      "noEmit": false,
      "outDir": "/repos/basic/dist",
      "skipLibCheck": true,
      "sourceMap": true,
      "strict": true,
      "target": "es2021",
      "verbatimModuleSyntax": true,
    },
    "include": [
      "/repos/basic/index.ts",
    ],
  },
}
`;

exports[`'/basic': Package.transpile > default > tree 1`] = `
"
├── dist
│   ├── index.d.ts
│   ├── index.d.ts.map
│   ├── index.js
│   └── index.js.map
├── index.ts
├── package.json
└── tsconfig.json
"
`;

exports[`'/basic-object-exports': Package.build > default > main 1`] = `
"export function foo(options = {}) {
    console.log('Hello, foo!', options.value);
}
export function bar(options = {}) {
    console.log('Hello, bar!', options.value);
}
(function (bar) {
    function baz(options = {}) {
        console.log('Hello, baz!', options.value);
    }
    bar.baz = baz;
})(bar || (bar = {}));
//# sourceMappingURL=index.js.map"
`;

exports[`'/basic-object-exports': Package.build > default > output 1`] = `
"{
  "name": "basic",
  "version": "0.0.0",
  "type": "module",
  "exports": {
    ".": {
      "src": "./index.ts",
      "types": "./dist/index.d.ts",
      "default": "./dist/index.js"
    }
  },
  "sideEffects": false,
  "main": "./dist/index.js",
  "module": "./dist/index.js",
  "types": "./dist/index.d.ts"
}


├── dist
│   ├── index.d.ts
│   ├── index.d.ts.map
│   ├── index.js
│   └── index.js.map
├── index.ts
├── package.json
└── tsconfig.json
"
`;

exports[`'/basic-object-exports': Package.build > default > result 1`] = `
{
  "packageJson": {
    "exports": {
      ".": {
        "default": "./dist/index.js",
        "src": "./index.ts",
        "types": "./dist/index.d.ts",
      },
    },
    "main": "./dist/index.js",
    "module": "./dist/index.js",
    "name": "basic",
    "sideEffects": false,
    "type": "module",
    "types": "./dist/index.d.ts",
    "version": "0.0.0",
  },
  "tsConfig": {
    "compilerOptions": {
      "composite": false,
      "declaration": true,
      "declarationDir": undefined,
      "declarationMap": true,
      "emitDeclarationOnly": false,
      "esModuleInterop": true,
      "isolatedModules": true,
      "module": "esnext",
      "moduleDetection": "force",
      "moduleResolution": "bundler",
      "noEmit": false,
      "outDir": "/repos/basic-object-exports/dist",
      "skipLibCheck": true,
      "sourceMap": true,
      "strict": true,
      "target": "es2021",
      "verbatimModuleSyntax": true,
    },
    "include": [
      "/repos/basic-object-exports/index.ts",
    ],
  },
}
`;

exports[`'/basic-object-exports': Package.build > default > types 1`] = `
"export declare function foo(options?: foo.Options): void;
export declare namespace foo {
    type Options = {
        value?: string | undefined;
    };
}
export declare function bar(options?: bar.Options): void;
export declare namespace bar {
    type Options = {
        value?: string | undefined;
    };
    function baz(options?: Options): void;
}
//# sourceMappingURL=index.d.ts.map"
`;

exports[`'/basic-object-exports': Package.transpile > default > result 1`] = `
{
  "tsConfig": {
    "compilerOptions": {
      "composite": false,
      "declaration": true,
      "declarationDir": undefined,
      "declarationMap": true,
      "emitDeclarationOnly": false,
      "esModuleInterop": true,
      "isolatedModules": true,
      "module": "esnext",
      "moduleDetection": "force",
      "moduleResolution": "bundler",
      "noEmit": false,
      "outDir": "/repos/basic-object-exports/dist",
      "skipLibCheck": true,
      "sourceMap": true,
      "strict": true,
      "target": "es2021",
      "verbatimModuleSyntax": true,
    },
    "include": [
      "/repos/basic-object-exports/index.ts",
    ],
  },
}
`;

exports[`'/basic-object-exports': Package.transpile > default > tree 1`] = `
"
├── dist
│   ├── index.d.ts
│   ├── index.d.ts.map
│   ├── index.js
│   └── index.js.map
├── index.ts
├── package.json
└── tsconfig.json
"
`;
